# dokoola-llm

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  config.ini.example  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  main.py  make.ps1  pyproject.toml
.github/workflows/: ci.yaml
cmd/server/: main.go
internal/clients/: backend.go  backend_test.go
internal/config/: config.go  config_test.go
internal/constants/: constants.go  constants_test.go
internal/handlers/: handlers_test.go  healthcheck.go  healthcheck_test.go  jobs.go  prompts.go  text_completion.go
internal/llm/: client.go  client_test.go
internal/middleware/: auth.go  auth_test.go
internal/models/: healthcheck.go  jobs.go  models_test.go  prompts.go  text_completion.go  text_completion_test.go  user.go
internal/prompts/: builder.go  builder_test.go
src/: ai.py  app.py  categories.py  config.py  constant.py  llm.py  logger.py  users.py
src/llm_prompts/: __init__.py  models.py  prompts.py
src/middlewares/: __init__.py  auth.py  process.py
src/routers/: actions.py  healthcheck.py  jobs.py  llm_text_completion.py
src/routers/models/: healthcheck.py  jobs.py  llm_text_completion.py  prompts.py  user.py
