[project]
name = "llm-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cerebras-cloud-sdk>=1.59.0",
    "fastapi[standard]>=0.116.1",
    "huggingface-hub>=0.33.4",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
